stylesheet.less
/* ... */
/*	===============================
	Flynn (grid) import
	=============================== */
@import "@{templateLocal}/grid.less";

/*	===============================
	Template Styles
	=============================== */


// 2. Header
.header-sub,
.header-main {
	background-color: lighten(@color-swatch1, 20%);
}

.header-sub {
	box-shadow: 0 1px 1px darken(fadeout(@color-swatch7, 75%), 30%);
	padding: 6px 0;
	position: relative;
	z-index: 1;
}

.header-phonenumber {
	text-align: right;
}

.header-image .widget.image {
	max-height: 200px;
	overflow: hidden;
	img {
		width: 100%;
	}
}

.header-main {
	border-bottom: 3px solid @color-swatch2;
}

.widget.logo {
	.logo {
		display: inline;
	}
}

.header-logo .widget.logo {
	margin: -29% 0 -33%;
}

.header-sub {
	.widget.companyname a,
	.widget.profile {
		font-family: @font-swatch4-font-family;
		font-weight: @font-swatch4-font-weight;
		color: @font-swatch4-color;
		line-height: @font-swatch4-line-height;
		letter-spacing: @font-swatch4-letter-spacing;
		font-size: @font-swatch4-font-size;
	}
}

.header-sub {
	color: @color-swatch2;
}

.header-navigation {
	min-height: 40px;
}

// 3. Navigation
.widget .extendednavigation ul li {
	> .text {
		padding: 0;
	}
	a, &.folder {
		margin-right: 0;
		> .text:hover, &:hover {
			background-color: @color-swatch2;
			color: @color-swatch7;
		}
		padding: 18px 30px;
		&:after {
			right: 20px;
			top: 47%;
		}
		&:hover:after {
			border-top-color: @color-swatch7;
		}
	}
	ul a > .text:hover {
		background-color: darken(@color-swatch2, 10%);
	}
	&.folder {
		padding-right: 40px;
		&:hover > .text {
			background-color: @color-swatch2;
			color: @color-swatch7;
		}
	}
	&:hover ul {
		top: 62px;
		left: 0;
		background-color: @color-swatch2;
		a:hover {
			background-color: darken(@color-swatch2, 10%);
		}
		.text {
			color: @color-swatch7;
			&:hover {
				color: @color-swatch7;
			}
		}
	}
}

.widget .extendednavigation ul .selected a {
	color: @color-swatch3;
}

// 8. Forms
fieldset .btn,
fieldset button,
form button {
	vertical-align: middle;
}

.form-group {
	padding-bottom: 10px;
}

.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
.widget.ecomcheckout .delivery select,
select,
input,
input[type=email],
input[type=text],
input[type=search],
textarea,
.contactform input,
.contactform textarea,
.widget.profile form fieldset input {
	text-indent: 0;
	width: 100%;
	padding: 8px 15px 10px;
	border: 2px solid lighten(@color-swatch5, 40%);
	outline: none;
	-webkit-appearance: none;
	-webkit-transition: border .2s;
	-moz-transition: border .2s;
	-ms-transition: border .2s;
	transition: border .2s;
	background-color: lighten(@color-swatch1, 10%);
	border-radius: 0;
	&:hover, &:focus {
		border-color: @color-swatch2;
	}
}

select::-ms-expand {
	display: none;
}

.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
select {
	-moz-appearance: none;
	text-indent: 0.01px;
	text-overflow: '';
}

.widget.profile form fieldset input,
input[type=email],
input[type=text],
input[type=search],
.signupform fieldset input {
	height: @font-swatch5-font-size + 27;
	vertical-align: middle;
}

.widget.profile form fieldset input,
.signupform fieldset input,
.blog-search-input {
	width: 100%;
}

textarea {
	resize: vertical;
	min-height: 120px;
}

.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
.widget.ecomcheckout .delivery select,
select {
	font-family: @font-swatch5-font-family;
	font-weight: @font-swatch5-font-weight;
	color: @font-swatch5-color;
	line-height: @font-swatch5-line-height;
	letter-spacing: @font-swatch5-letter-spacing;
	font-size: @font-swatch5-font-size;
	cursor: pointer;
	-webkit-appearance: menulist;
	position: relative;
/* 	background-image: image('/images/icons/arrow-down.png'); */
	background-repeat: no-repeat;
	background-position: right 12px center;
	background-position-x: 95%;
	background-position-y: 53%;
	margin-bottom: 12px;
	padding-right: 33px;
	height: @font-swatch5-font-size + 27;
}

.svg {
	.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select, select {
/* 		background-image: image('/images/icons/arrow-down.svg'); */
	}
}

input[type="search"]::-webkit-search-decoration {
	display: none;
}

.widget.profile form fieldset label,
.widget.contactform label,
div.signupform label,
label {
	display: inline-block;
	font-family: @font-swatch3-font-family;
	font-weight: @font-swatch3-font-weight;
	color: @font-swatch3-color;
	line-height: @font-swatch3-line-height;
	letter-spacing: @font-swatch3-letter-spacing;
	font-size: @font-swatch3-font-size;
}

// 0. Buttons
button.btn,
.signupform fieldset button,
.widget.profile form button,
.widget.paypalbuynow .widget.button.paypal,
.widget.ecomcheckout .checkout-order-button,
.widget.tweet a,
.widget.dropbox button,
.blog-search-submit-button,
.widget.ecombasket .ecombasket-list-container .ecombasket-checkout-wrap .ecombasket-checkout-link,
.widget.ecombasket .ecombasket-list-container ul li .ecombasket-item-info .ecombasket-remove-button,
.blog-search-submit-button,
.ecombasket-summary-link,
.basket-summary-empty-cta,
.ecombasket-remove-button {
	background-color: @font-swatch7-background-color;
	font-family: @font-swatch7-font-family;
	font-size: @font-swatch7-font-size;
	font-weight:  @font-swatch7-font-weight;
	line-height:@font-swatch7-line-height;
	color: @font-swatch7-color;
	letter-spacing: @font-swatch7-letter-spacing;
	padding: 8px 14px;
	display: inline-block;
	cursor: pointer;
	margin: 0;
	border: none;
	text-decoration: none;
	&:hover {
		text-decoration: none;
		background-color: @font-swatch7-background-color-hover;
	}
}

.basket-summary-empty-cta,
.ecombasket-summary-link {
	display: inline-block;
}
/* ... */

